# site-cartographer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/site_cartographer/: archive.py  browser.py  cli.py  crawler.py  graph.py  links.py  progress.py  serve.py  tui.py  webapp.py
src/site_cartographer/viewer/: index.html  viewer.js
src/site_cartographer/web/: app.js  home.html  scan-new.html  scan-progress.html  scan-resume.html  scans.html  styles.css
tests/: test_archive.py  test_canonicalize.py  test_dedupe.py  test_link_extractors.py  test_links.py  test_resume_suggestions.py  test_same_origin.py  test_scope.py
tests/fixtures/: imagemap_page.html  plain_links_page.html  rich_links_page.html
