[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site-cartographer"
version = "0.1.0"
description = "Crawl a website, archive each page as MHTML, and render an interactive link graph with screenshot thumbnails."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ethan Wright", email = "dusty3692@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "playwright>=1.48",
  "beautifulsoup4>=4.12",
  "w3lib>=2.2",
  "networkx>=3.3",
  "httpx>=0.27",
  "rich>=13.7",
  "questionary>=2.0",
  "fa2-modified>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.scripts]
site-cartographer = "site_cartographer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/site_cartographer"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
